Traducida página al inglés

--- a/pagina1.html
+++ b/pagina1.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>La carrera de la muerte del año 2000 (1970)</title>
+        <title>The Death Race of 2000 (1970)</title>
         <link rel="stylesheet" href="css/estilo.css">
         <meta name="author" content="fulano">
     </head>
     <body>
         <div id="contenedor">
-            <h1>La carrera de la muerte del año 2000</h1>
-            <h2>Ficha</h2>
+            <h1>The Death Race of 2000</h1>
+            <h2>Sheet</h2>
             <ul>
-                <li><strong>Año: </strong>1975</li>
-                <li><strong>País: </strong>Estados Unidos</li>
+                <li><strong>Year: </strong>1975</li>
+                <li><strong>Country: </strong>Estados Unidos</li>
                 <li><strong>Director: </strong>Paul Bartel</li>
-                <li><strong>Reparto: </strong>
+                <li><strong>Cast: </strong>
                     <ul>
                         <li>David Carradine</li>
                         <li>Simone Griffeth</li>
@@ -21,7 +21,7 @@
                         <li>Mary Wonorov</li>
                     </ul>    
                 </li>
-                <li><strong>Género: </strong>Acción | Ciencia ficción | Distopía</li>
+                <li><strong>Género: </strong>Action | Ciencia ficción | Distopía</li>
             </ul>
             <h2>Sinopsis</h2>
             <p>En 1979, los Estados Unidos se derrumbaron, dando lugar a disturbios civiles masivos y colapso económico. El gobierno se reestructuró en un régimen totalitario bajo la ley marcial. Para pacificar a la población, el gobierno ha organizado la Transcontinental Road Race, donde un grupo de conductores está conduciendo a través del país en sus automóviles de gran potencia, infames por la violencia, gore y peatones inocentes golpeados por puntos de bonificación.</p>
