Traducida página al alemán

--- a/pagina1.html
+++ b/pagina1.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>La carrera de la muerte del año 2000 (1970)</title>
+        <title>Das Todesrennen 2000 (1970)</title>
         <link rel="stylesheet" href="css/estilo.css">
         <meta name="author" content="fulano">
     </head>
     <body>
         <div id="contenedor">
-            <h1>La carrera de la muerte del año 2000</h1>
-            <h2>Ficha</h2>
+            <h1>Das Todesrennen 2000</h1>
+            <h2>Dattenblatt</h2>
             <ul>
-                <li><strong>Año: </strong>1975</li>
-                <li><strong>País: </strong>Estados Unidos</li>
-                <li><strong>Director: </strong>Paul Bartel</li>
-                <li><strong>Reparto: </strong>
+                <li><strong>Jahr: </strong>1975</li>
+                <li><strong>Land: </strong>USA</li>
+                <li><strong>Direktor: </strong>Paul Bartel</li>
+                <li><strong>Verteilung: </strong>
                     <ul>
                         <li>David Carradine</li>
                         <li>Simone Griffeth</li>
