--- a/pagina1.html
+++ b/pagina1.html
@@ -6,6 +6,9 @@
         <meta name="author" content="fulano">
     </head>
     <body>
+        <header>
+            <img src="img/descarga.jpg" width="10%" alt="logo">
+        </header>
         <div id="contenedor">
             <h1>La carrera de la muerte del año 2000</h1>
             <h2>Ficha</h2>
